@startuml
package Dominio {
    
    class Usuario {
        - String nombreCompleto
        - String nombreUsuario
        - String passwordHash
        - String email
        + Usuario(nombreCompleto, nombreUsuario, password, email)
        + getNombreUsuario(): String
        + getPasswordhash(): String
    }
    
    class Contacto {
        - String nombre
        - String telefono
        - String email
        - String urlPaginaPersonal
        - String origenImportacion
        + Contacto(...)
        + getNombre(): String
    }
    
    class SolicitudCompartir {
        <<enum>> EstadoSolicitud
        - String idSolicitud
        - String nombreSolicitante
        - String nombreDestinatario
        - EstadoSolicitud estado
        - List<Contacto> contactosCompartidos
        + SolicitudCompartir(...)
        + setEstado(EstadoSolicitud)
    }
    
    class ServicioUsuarios {
        - RepositorioUsuarios repo
        + registrarUsuario(...)
        + autenticar(nombreUsuario, password): Usuario
    }
    
    class ServicioContactos {
        - RepositorioContactos repo
        + agregarContacto(...)
        + solicitarCompartir(...)
        + aceptarSolicitud(...)
    }
}

package Persistencia {
    
    class RepositorioUsuarios {
        - static final Key LLAVE_SISTEMA
        + guardar(Usuario)
        + buscarPorNombreUsuario(String): Usuario
    }
    
    class RepositorioContactos {
        + guardarListaContactos(...)
        + cargarListaContactos(...)
        + guardarSolicitud(SolicitudCompartir)
    }
    
    class CifradorAES {
        {static} + cifrar(datos, llave): String
        {static} + descifrar(datosCifrados, llave): String
    }
    
    class UtileriaSeguridad {
        {static} + generarHash(passwordPlano): String
        {static} + validarHash(passwordPlano, passwordHash): boolean
        {static} + derivarLlave(clave): Key
    }
}

package UI {
    class InterfazUsuario {
        - Scanner scanner
        - ServicioUsuarios servicioUsuarios
        - ServicioContactos servicioContactos
        - Usuario usuarioActual
        - String passwordActual
        + iniciar()
        + login()
    }
}


SolicitudCompartir *-- Contacto 

ServicioUsuarios o--> RepositorioUsuarios 
ServicioContactos o--> RepositorioContactos 

Usuario .up.> UtileriaSeguridad 
ServicioUsuarios .up.> UtileriaSeguridad 
RepositorioUsuarios .up.> UtileriaSeguridad 
RepositorioContactos .up.> UtileriaSeguridad 

RepositorioUsuarios .up.> CifradorAES 
RepositorioContactos .up.> CifradorAES 

InterfazUsuario o--> ServicioUsuarios 
InterfazUsuario o--> ServicioContactos 
InterfazUsuario .up.> Usuario

RepositorioContactos .up.> SolicitudCompartir
@enduml